Changed <div class="header"> to just <header> and added "header" class to the div within the header; updated css selectors to reflect these changes; fixed non-working link to page section by adding id to that section; added spacing within the header; added comments to both HTML and CSS files.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,23 +8,26 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
     color: #ffffff;
 }
 
-.header h1 {
+/*h1 heading tag*/
+h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+/* Changes the font color to the seo part of h1 */
+h1 .seo {
     color: #d9dcd6;
 }
 
-.header div {
+/* 1st div, with class "header" */
+div.header {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -32,24 +35,29 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+/* Styles the unordered list in the div with class "header" */
+div.header ul {
     list-style-type: none;
 }
 
-.header div ul li {
+/* Styles the list elements within the unordered list in the div w/ class "header */
+div.header ul li {
     display: inline-block;
     margin-left: 25px;
 }
 
+/* for all anchor tags */
 a {
     color: #ffffff;
     text-decoration: none;
 }
 
+/* For all p tags */
 p {
     font-size: 16px;
 }
 
+/*  */
 .hero {
     height: 800px;
     width: 100%;
